backend/tests/models/snapshots/can_create_maximum_instances@instances.snap
---
source: tests/models/instances.rs
assertion_line: 97
expression: error
---
Any(
    NodeIdTooLarge,
)
