backend/tests/models/snapshots/can_create_with_password@users.snap
---
source: tests/models/users.rs
assertion_line: 43
expression: res
snapshot_kind: text
---
Ok(
    Model {
        id: ID,
        email: "test@financrr.dev",
        name: "Test Account",
        flags: 2,
        password: "PASSWORD",
        reset_token: None,
        reset_sent_at: None,
        email_verification_token: None,
        email_verification_sent_at: None,
        email_verified_at: None,
        created_at: DATE,
        updated_at: DATE,
    },
)
