backend/tests/models/snapshots/can_find_by_email@users-2.snap
---
source: tests/models/users.rs
assertion_line: 60
expression: non_existing_user_results
snapshot_kind: text
---
Ok(
    None,
)
