backend/tests/models/snapshots/can_find_by_email@users.snap
---
source: tests/models/users.rs
assertion_line: 59
expression: existing_user
snapshot_kind: text
---
Ok(
    Some(
        Model {
            id: ID
            email: "user1@financrr.test",
            name: "Test Account",
            flags: 2,
            password: "PASSWORD",
            reset_token: None,
            reset_sent_at: None,
            email_verification_token: None,
            email_verification_sent_at: None,
            email_verified_at: None,
            created_at: DATE,
            updated_at: DATE,
        },
    ),
)
