backend/tests/models/snapshots/unknown_currency@instances.snap
---
source: tests/models/currencies.rs
assertion_line: 31
expression: unknown_currency.unwrap()
---
Model {
    id: ID,
    user_id: None,
    name: "No currency",
    symbol: "¤",
    iso_code: Some(
        "XXX",
    ),
    decimal_places: 0,
    created_at: DATE,
    updated_at: DATE,
}
